add header static

--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,20 @@
 </head>
 <body>
 <div class="page">
+
     <div class = "header">
-        <div class="header__name"><img class="name" src="img/the_shop_logo.svg" alt="7h3_5h0p"></div>
+        <span class="header__name">7h3 5h0p</span>
+        <!--<div class="header__name"><img class="name" src="img/the_shop_logo.svg" alt="7h3 5h0p"></div>-->
+        <!--<span class="header__name">7h3 5h0p</span>-->
+        <div class="header__logo">
+            <img class="logo" src="img/oggetto_logo.svg" alt="Логотип">
+           <!-- <object class="logo" data="img/oggetto_logo.svg" type="image/svg+xml" fill="red"></object>-->
+            <!--<embed class="logo" type="image/svg+xml" src="img/oggetto_logo.svg" pluginpage="http://www.adobe.com/svg/viewer/install/" height="100" width="100"></embed>-->
+            <!--<img class="logo" src="img/oggetto_logo.svg" alt="Логотип">-->
         </div>
-        <div class="header__logo"><img class="logo" src="img/oggetto_logo.svg" alt="Логотип"></div>
-        </div>
-        <div class="header__phone"><p class="phone">+7 (812) 2.12.85.06</p>
-        </div>
+
+        <span class="header__phone">+7 (812) 2•12•85•06</span>
+
     </div>
 
     <div class="navigation">
@@ -72,10 +79,10 @@
                         <div class="wish-list__item"><a href="#" class="wish-list__link">Отложить на потом</a></div>
                     </div>
 
+                </div>
             </div>
         </div>
     </div>
-
     <div class="footer">
         <div class="footer__service-support">
             <div class="service__link">
@@ -133,6 +140,7 @@
         <span class="information__first-line">2005-2017 c 7h350p.ru - модный интернет магазин одежды, обуви и аксессуаров.</span>
         <span class="information__second-line">Все права защищены. Доставка по всей России!</span>
     </div>
+
 </div>
 
 <script src="js/scripts.js"></script>
