add navigation static

--- a/src/index.html
+++ b/src/index.html
@@ -27,19 +27,22 @@
     </div>
 
     <div class="navigation">
-        <div class="navigation__link">
-            <ul class="navigation_list">
-                <li class="navigation__item"><a href="#" class="navigation__link">LISP</a>
-                <li class="navigation__item"><a href="#" class="navigation__link">OCaml</a>
-                <li class="navigation__item"><a href="#" class="navigation__link">JavaScript</a>
-                <li class="navigation__item"><a href="#" class="navigation__link">Python</a>
-                <li class="navigation__item"><a href="#" class="navigation__link">PHP</a>
-            </ul>
-        </div>
-        <div class="navigation__search">
-            <input name="q" placeholder="">
+        <div class="navigation__content">
+            <div class="navigation__link">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a href="#" class="navigation__link">LISP</a>
+                    <li class="navigation__item"><a href="#" class="navigation__link">OCaml</a>
+                    <li class="navigation__item"><a href="#" class="navigation__link">JavaScript</a>
+                    <li class="navigation__item"><a href="#" class="navigation__link">Python</a>
+                    <li class="navigation__item"><a href="#" class="navigation__link">PHP</a>
+                </ul>
+            </div>
+            <input class="navigation__search" name="search" placeholder="">
         </div>
     </div>
+
+
+
 
     <div class="content">
         <div class="content__breadcrumbs">
