--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,10 @@
 
     <div class = "header">
         <span class="header__name">7h3 5h0p</span>
-        <!--<div class="header__name"><img class="name" src="img/the_shop_logo.svg" alt="7h3 5h0p"></div>-->
-        <!--<span class="header__name">7h3 5h0p</span>-->
         <div class="header__logo">
             <img class="logo" src="img/oggetto_logo.svg" alt="Логотип">
-           <!-- <object class="logo" data="img/oggetto_logo.svg" type="image/svg+xml" fill="red"></object>-->
-            <!--<embed class="logo" type="image/svg+xml" src="img/oggetto_logo.svg" pluginpage="http://www.adobe.com/svg/viewer/install/" height="100" width="100"></embed>-->
-            <!--<img class="logo" src="img/oggetto_logo.svg" alt="Логотип">-->
         </div>
-
         <span class="header__phone">+7 (812) 2•12•85•06</span>
-
     </div>
 
     <div class="navigation">
@@ -41,34 +34,38 @@
         </div>
     </div>
 
-
-
-
     <div class="content">
         <div class="content__breadcrumbs">
             <ul class="breadcrumbs__list">
                 <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">LISP</a>
+                <li class="breadcrumbs__item"> /
                 <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Одежда</a>
+                <li class="breadcrumbs__item"> /
                 <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Футболки</a>
             </ul>
         </div>
-        <div class="contant__product">
-            <div class="product__image"></div>
-            <div class="product__description">
+        <div class="content__product">
+            <div class="product__image">
+                <img class="product__tshirt" src="img/tshirt_white.jpg" alt="Белая футболка">
+            </div>
+            <div class="product__info">
                 <div class="product__text">
-                    <div class="text__name"><p class="text__name_h1">Футболка Alien technology</p></div>
-                    <div class="text__description"><p class="text__description_h2">Состав: 100% хлопок, динамическая типизация, польская нотация. Производство: Россия.</p></div>
-                    <div class="text__price"><p class="text__price_h1">1500</p></div>
+                    <h2 class="product__title">Футболка Alien technology</h2>
+                    <p class="product__description">Состав: 100% хлопок, динамическая типизация, польская нотация. Производство: Россия.</p>
+                    <div class="product__price">1500₽</div>
                 </div>
                 <div class="product__size">
                     <div class="size__text">Размер:</div>
                     <div class="size__icon">
-                        <ul class="size_list">
+                        <ul class="size__list">
                             <li class="size__item"><a href="#" class="size__link">S</a>
                             <li class="size__item"><a href="#" class="size__link">M</a>
                             <li class="size__item"><a href="#" class="size__link">L</a>
                         </ul>
                     </div>
+                </div>
+                <div class="product__color">
+                    <div class="color__text">Цвет:</div>
                     <div class="color__icon">
                         <ul class="color_list">
                             <li class="color__item"><a href="#" class="color__link">white</a>
@@ -76,12 +73,13 @@
                             <li class="color__item"><a href="#" class="color__link">green</a>
                         </ul>
                     </div>
-                    <div class="button__buy"><button>Купить</button></div>
-                    <div class="wish-list">
-                        <div class="wish-list__heart"><img class="heart heart_like" src="img/heart.svg" alt="Лайк"></div>
-                        <div class="wish-list__item"><a href="#" class="wish-list__link">Отложить на потом</a></div>
+                </div>
+                <div class="button__buy"><button>Купить</button></div>
+                <div class="wish-list">
+                    <div class="wish-list__heart"><img class="heart heart_like" src="img/heart.svg" alt="Лайк"></div>
+                    <div class="wish-list__item"><a href="#" class="wish-list__link">Отложить на потом</a></div>
+                </div>
                     </div>
-
                 </div>
             </div>
         </div>
