add text for travis

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
         <div class="header__logo">
             <img class="logo" src="img/oggetto_logo.svg" alt="Логотип">
         </div>
-        <span class="header__phone">+7 (812) 2•12•85•06</span>
+        <span class="header__phone">Hello Travis</span>
+        <!--+7 (812) 2•12•85•06-->
     </div>
 
     <div class="navigation">
