--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,7 @@
         <div class="header__logo">
             <img class="logo" src="img/oggetto_logo.svg" alt="Логотип">
         </div>
-        <span class="header__phone">Hello Travis</span>
-        <!--+7 (812) 2•12•85•06-->
+        <span class="header__phone">+7 (812) 2•12•85•06</span>
     </div>
 
     <div class="navigation">
@@ -36,7 +35,7 @@
     </div>
 
     <div class="content">
-        <div class="content__breadcrumbs">
+        <div class="breadcrumbs">
             <ul class="breadcrumbs__list">
                 <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">LISP</a>
                 <li class="breadcrumbs__item"> /
@@ -45,10 +44,8 @@
                 <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link">Футболки</a>
             </ul>
         </div>
-        <div class="content__product">
-            <div class="product__image">
-                <img class="product__tshirt" src="img/tshirt_white.jpg" alt="Белая футболка">
-            </div>
+        <div class="product">
+            <img class="product__pic" src="img/tshirt_white.jpg" alt="Белая футболка">
             <div class="product__info">
                 <div class="product__text">
                     <h2 class="product__title">Футболка Alien technology</h2>
@@ -59,9 +56,9 @@
                     <div class="size__text">Размер:</div>
                     <div class="size__icon">
                         <ul class="size__list">
-                            <li class="size__item"><a href="#" class="size__link">S</a>
-                            <li class="size__item"><a href="#" class="size__link">M</a>
-                            <li class="size__item"><a href="#" class="size__link">L</a>
+                            <li class="size__item size__item_s">S
+                            <li class="size__item size__item_m">M
+                            <li class="size__item size__item_l">L
                         </ul>
                     </div>
                 </div>
@@ -69,22 +66,23 @@
                     <div class="color__text">Цвет:</div>
                     <div class="color__icon">
                         <ul class="color_list">
-                            <li class="color__item"><a href="#" class="color__link">white</a>
-                            <li class="color__item"><a href="#" class="color__link">orange</a>
-                            <li class="color__item"><a href="#" class="color__link">green</a>
+                            <li class="color__item">white
+                            <li class="color__item">orange
+                            <li class="color__item">green
                         </ul>
                     </div>
                 </div>
-                <div class="button__buy"><button>Купить</button></div>
-                <div class="wish-list">
-                    <div class="wish-list__heart"><img class="heart heart_like" src="img/heart.svg" alt="Лайк"></div>
-                    <div class="wish-list__item"><a href="#" class="wish-list__link">Отложить на потом</a></div>
-                </div>
+                <div class="product__buy">
+                    <div class="button__buy"><button>Купить</button></div>
+                    <div class="wish-list">
+                        <div class="wish-list__heart"><img class="heart heart_like" src="img/heart.svg" alt="Лайк"></div>
+                        <div class="wish-list__item"><a href="#" class="wish-list__link">Отложить на потом</a></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <div class="footer">
         <div class="footer__service-support">
             <div class="service__link">
