add tshirt color

--- a/src/index.html
+++ b/src/index.html
@@ -56,8 +56,8 @@
                     <div class="size__text">Размер:</div>
                     <div class="size__icon">
                         <ul class="size__list">
-                            <li class="size__item size__item_s">S
-                            <li class="size__item size__item_m">M
+                            <li class="size__item size__item_s ">S
+                            <li class="size__item size__item_m  size__item_active">M
                             <li class="size__item size__item_l">L
                         </ul>
                     </div>
@@ -65,10 +65,10 @@
                 <div class="product__color">
                     <div class="color__text">Цвет:</div>
                     <div class="color__icon">
-                        <ul class="color_list">
-                            <li class="color__item">white
-                            <li class="color__item">orange
-                            <li class="color__item">green
+                        <ul class="color__list">
+                            <li class="color__item color__white color__item_active">
+                            <li class="color__item color__yellow">
+                            <li class="color__item color__green">
                         </ul>
                     </div>
                 </div>
