--- a/src/index.html
+++ b/src/index.html
@@ -73,11 +73,12 @@
                     </div>
                 </div>
                 <div class="product__buy">
-                    <div class="button__buy"><button>Купить</button></div>
+                    <button class="button__buy">Купить</button>
                     <div class="wish-list">
-                        <div class="wish-list__heart"><img class="heart heart_like" src="img/heart.svg" alt="Лайк"></div>
+                        <div class="wish-list__heart"><img class="heart heart_like" src="img/heart-button.svg" alt="Лайк"></div>
                         <div class="wish-list__item"><a href="#" class="wish-list__link">Отложить на потом</a></div>
                     </div>
+                </div>
                 </div>
             </div>
         </div>
