--- a/src/index.html
+++ b/src/index.html
@@ -85,61 +85,59 @@
     </div>
 
     <div class="footer">
-        <div class="footer__service-support">
-            <div class="service__link">
-                <ul class="service_list">
-                    <li class="service__item"><a href="#" class="navigation__link">Как сделать заказ</a>
-                    <li class="service__item"><a href="#" class="navigation__link">Возврат товара</a>
-                    <li class="service__item"><a href="#" class="navigation__link">Публичная оферта</a>
-                    <li class="service__item"><a href="#" class="navigation__link">Доставка</a>
-                </ul>
-            </div>
-            <div class="support__link">
-                <ul class="support_list">
-                    <li class="support__item"><a href="#" class="support__link">Способы оплаты</a>
-                    <li class="support__item"><a href="#" class="support__link">Правила поддержки</a>
-                    <li class="support__item"><a href="#" class="support__link">Возврат денежных средств</a>
-                    <li class="support__item"><a href="#" class="support__link">Вопросы и ответы</a>
-                </ul>
-            </div>
-        </div>
-        <div class="footer__company">
-            <div class="company__link">
-                <div class="company__first-col">
-                    <ul class="company__list">
-                        <li class="service__item"><a href="#" class="navigation__link">О нас</a>
-                        <li class="service__item"><a href="#" class="navigation__link">Контакты</a>
-                        <li class="service__item"><a href="#" class="navigation__link">Вакансии</a>
-                        <li class="service__item"><a href="#" class="navigation__link">Партнеры</a>
+        <div class="footer__content">
+            <div class="support">
+                <div class="support__link">
+                    <ul class="support_list">
+                        <li class="support__item"><a href="#" class="support__link">Как сделать заказ</a>
+                        <li class="support__item"><a href="#" class="support__link">Возврат товара</a>
+                        <li class="support__item"><a href="#" class="support__link">Публичная оферта</a>
+                        <li class="support__item"><a href="#" class="support__link">Доставка</a>
                     </ul>
                 </div>
-                <div class="company__second-col">
-                    <ul class="company__list">
-                        <li class="service__item"><a href="#" class="navigation__link">Сертификаты</a>
-                        <li class="service__item"><a href="#" class="navigation__link">Преимущества</a>
-                        <li class="service__item"><a href="#" class="navigation__link">Наши скидки</a>
+                <div class="support__link">
+                    <ul class="support_list">
+                        <li class="support__item"><a href="#" class="support__link">Способы оплаты</a>
+                        <li class="support__item"><a href="#" class="support__link">Правила поддержки</a>
+                        <li class="support__item"><a href="#" class="support__link">Возврат денежных средств</a>
+                        <li class="support__item"><a href="#" class="support__link">Вопросы и ответы</a>
                     </ul>
                 </div>
             </div>
+            <div class="about-company">
+                <div class="about-company__link">
+                        <ul class="about-company__list">
+                            <li class="about-company__item"><a href="#" class="about-company__link">О нас</a>
+                            <li class="about-company__item"><a href="#" class="about-company__link">Контакты</a>
+                            <li class="about-company__item"><a href="#" class="about-company__link">Вакансии</a>
+                            <li class="about-company__item"><a href="#" class="about-company__link">Партнеры</a>
+                        </ul>
+                        <ul class="company__list">
+                            <li class="about-company__item"><a href="#" class="about-company__link">Сертификаты</a>
+                            <li class="about-company__item"><a href="#" class="about-companyn__link">Преимущества</a>
+                            <li class="about-company__item"><a href="#" class="about-company__link">Наши скидки</a>
+                        </ul>
+                </div>
+            </div>
+            <div class="footer__bonus">
+                <ul class="bonus__list">
+                    <li class="bonus__item"><a href="#" class="bonus__link"><img class="delivery" src="img/delivery.svg" alt="Доставка">бесплантая доставка от 4000р</a>
+                    <li class="bonus__item"><a href="#" class="bonus__link"><img class="heart heart_bonus" src="img/heart.svg" alt="Лайк">пробники в подарок при каждой покупке</a>
+                    <li class="bonus__item"><a href="#" class="bonus__link"><img class="cup" src="img/cup.svg" alt="Кубок">акции и подарки за покупку</a>
+                </ul>
+            </div>
+            <div class="footer__references">
+                <ul class="references__list">
+                    <li class="references__item"><a href="#" class="references__link"><img class="facebook" src="img/facebook.svg" alt="facebook"></a>
+                    <li class="references__item"><a href="#" class="references__link"><img class="twitter" src="img/twitter.svg" alt="twitter"></a>
+                    <li class="references__item"><a href="#" class="references__link"><img class="instagram" src="img/instagram.svg" alt="instagram"></a>
+                </ul>
+            </div>
         </div>
-        <div class="footer__bonus">
-            <ul class="bonus__list">
-                <li class="bonus__item"><a href="#" class="bonus__link"><img class="delivery" src="img/delivery.svg" alt="Доставка">бесплантая доставка от 4000р</a>
-                <li class="bonus__item"><a href="#" class="bonus__link"><img class="heart heart_bonus" src="img/heart.svg" alt="Лайк">пробники в подарок при каждой покупке</a>
-                <li class="bonus__item"><a href="#" class="bonus__link"><img class="cup" src="img/cup.svg" alt="Кубок">акции и подарки за покупку</a>
-            </ul>
+        <div class="copyright">
+            <span class="information__first-line">2005-2017 c 7h350p.ru - модный интернет магазин одежды, обуви и аксессуаров.</span>
+            <span class="information__second-line">Все права защищены. Доставка по всей России!</span>
         </div>
-        <div class="footer__references">
-            <ul class="references__list">
-                <li class="references__item"><a href="#" class="references__link"><img class="facebook" src="img/facebook.svg" alt="facebook"></a>
-                <li class="references__item"><a href="#" class="references__link"><img class="twitter" src="img/twitter.svg" alt="twitter"></a>
-                <li class="references__item"><a href="#" class="references__link"><img class="delivery" src="img/instagram.svg" alt="instagram"></a>
-            </ul>
-        </div>
-    </div>
-    <div class="copyright">
-        <span class="information__first-line">2005-2017 c 7h350p.ru - модный интернет магазин одежды, обуви и аксессуаров.</span>
-        <span class="information__second-line">Все права защищены. Доставка по всей России!</span>
     </div>
 
 </div>
