add footer service

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
                     <p class="product__description">Состав: 100% хлопок, динамическая типизация, польская нотация. Производство: Россия.</p>
                     <div class="product__price">1500₽</div>
                 </div>
-                <div class="product__size">
+                <div class="product__size size">
                     <div class="size__text">Размер:</div>
                     <div class="size__icon">
                         <ul class="size__list">
@@ -62,7 +62,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="product__color">
+                <div class="product__color color">
                     <div class="color__text">Цвет:</div>
                     <div class="color__icon">
                         <ul class="color__list">
@@ -75,7 +75,7 @@
                 <div class="product__buy">
                     <button class="button__buy">Купить</button>
                     <div class="wish-list">
-                        <div class="wish-list__heart"><img class="heart heart_like" src="img/heart-button.svg" alt="Лайк"></div>
+                        <div class="wish-list__heart"><img class="heart heart-like" src="img/heart-button.svg" alt="Лайк"></div>
                         <div class="wish-list__item"><a href="#" class="wish-list__link">Отложить на потом</a></div>
                     </div>
                 </div>
@@ -85,38 +85,38 @@
     </div>
 
     <div class="footer">
-        <div class="footer__content">
-            <div class="support">
-                <div class="support__link">
-                    <ul class="support_list">
-                        <li class="support__item"><a href="#" class="support__link">Как сделать заказ</a>
-                        <li class="support__item"><a href="#" class="support__link">Возврат товара</a>
-                        <li class="support__item"><a href="#" class="support__link">Публичная оферта</a>
-                        <li class="support__item"><a href="#" class="support__link">Доставка</a>
+        <div class="footer__service service">
+            <div class="service__info">
+                <h3 class="service__text">Сервис и поддержка</h3>
+                <div class="service__link">
+                    <ul class="service_list">
+                        <li class="service__item"><a href="#" class="service__link">Как сделать заказ</a>
+                        <li class="service__item"><a href="#" class="service__link">Возврат товара</a>
+                        <li class="service__item"><a href="#" class="service__link">Публичная оферта</a>
+                        <li class="service__item"><a href="#" class="service__link">Доставка</a>
                     </ul>
-                </div>
-                <div class="support__link">
-                    <ul class="support_list">
-                        <li class="support__item"><a href="#" class="support__link">Способы оплаты</a>
-                        <li class="support__item"><a href="#" class="support__link">Правила поддержки</a>
-                        <li class="support__item"><a href="#" class="support__link">Возврат денежных средств</a>
-                        <li class="support__item"><a href="#" class="support__link">Вопросы и ответы</a>
+                    <ul class="service_list">
+                        <li class="service__item"><a href="#" class="service__link">Способы оплаты</a>
+                        <li class="service__item"><a href="#" class="service__link">Правила поддержки</a>
+                        <li class="service__item"><a href="#" class="service__link">Возврат денежных средств</a>
+                        <li class="service__item"><a href="#" class="service__link">Вопросы и ответы</a>
                     </ul>
                 </div>
             </div>
-            <div class="about-company">
-                <div class="about-company__link">
-                        <ul class="about-company__list">
-                            <li class="about-company__item"><a href="#" class="about-company__link">О нас</a>
-                            <li class="about-company__item"><a href="#" class="about-company__link">Контакты</a>
-                            <li class="about-company__item"><a href="#" class="about-company__link">Вакансии</a>
-                            <li class="about-company__item"><a href="#" class="about-company__link">Партнеры</a>
-                        </ul>
-                        <ul class="company__list">
-                            <li class="about-company__item"><a href="#" class="about-company__link">Сертификаты</a>
-                            <li class="about-company__item"><a href="#" class="about-companyn__link">Преимущества</a>
-                            <li class="about-company__item"><a href="#" class="about-company__link">Наши скидки</a>
-                        </ul>
+            <div class="service__info">
+                <h3 class="service__text">О компании</h3>
+                <div class="service__link">
+                    <ul class="service_list">
+                        <li class="service__item"><a href="#" class="service__link">О нас</a>
+                        <li class="service__item"><a href="#" class="service__link">Контакты</a>
+                        <li class="service__item"><a href="#" class="service__link">Вакансии</a>
+                        <li class="service__item"><a href="#" class="service__link">Партнеры</a>
+                    </ul>
+                    <ul class="service_list">
+                        <li class="service__item"><a href="#" class="service__link">Сертификаты</a>
+                        <li class="service__item"><a href="#" class="service__link">Преимущества</a>
+                        <li class="service__item"><a href="#" class="service__link">Наши скидки</a>
+                    </ul>
                 </div>
             </div>
             <div class="footer__bonus">
