update footer service

--- a/src/index.html
+++ b/src/index.html
@@ -82,56 +82,59 @@
                 </div>
             </div>
         </div>
-    </div>
 
     <div class="footer">
-        <div class="footer__service service">
-            <div class="service__info">
-                <h3 class="service__text">Сервис и поддержка</h3>
-                <div class="service__link">
-                    <ul class="service_list">
-                        <li class="service__item"><a href="#" class="service__link">Как сделать заказ</a>
-                        <li class="service__item"><a href="#" class="service__link">Возврат товара</a>
-                        <li class="service__item"><a href="#" class="service__link">Публичная оферта</a>
-                        <li class="service__item"><a href="#" class="service__link">Доставка</a>
-                    </ul>
-                    <ul class="service_list">
-                        <li class="service__item"><a href="#" class="service__link">Способы оплаты</a>
-                        <li class="service__item"><a href="#" class="service__link">Правила поддержки</a>
-                        <li class="service__item"><a href="#" class="service__link">Возврат денежных средств</a>
-                        <li class="service__item"><a href="#" class="service__link">Вопросы и ответы</a>
-                    </ul>
+        <div class="footer__service h-service">
+            <div class="service">
+                <div class="service__info">
+                    <h4 class="service__text">Сервис и поддержка</h4>
+                    <div class="service__link">
+                        <ul class="service__list">
+                            <li class="service__item"><a href="#" class="service__link">Как сделать заказ</a>
+                            <li class="service__item"><a href="#" class="service__link">Возврат товара</a>
+                            <li class="service__item"><a href="#" class="service__link">Публичная оферта</a>
+                            <li class="service__item"><a href="#" class="service__link">Доставка</a>
+                        </ul>
+                        <ul class="service__list">
+                            <li class="service__item"><a href="#" class="service__link">Способы оплаты</a>
+                            <li class="service__item"><a href="#" class="service__link">Правила продажи</a>
+                            <li class="service__item"><a href="#" class="service__link">Возврат денежных средств</a>
+                            <li class="service__item"><a href="#" class="service__link">Вопросы и ответы</a>
+                        </ul>
+                    </div>
+                </div>
+                <div class="service__info">
+                    <h4 class="service__text">О компании</h4>
+                    <div class="service__link">
+                        <ul class="service__list">
+                            <li class="service__item"><a href="#" class="service__link">О нас</a>
+                            <li class="service__item"><a href="#" class="service__link">Контакты</a>
+                            <li class="service__item"><a href="#" class="service__link">Вакансии</a>
+                            <li class="service__item"><a href="#" class="service__link">Партнерам</a>
+                        </ul>
+                        <ul class="service__list service__list_last-col">
+                            <li class="service__item"><a href="#" class="service__link">Сертификаты</a>
+                            <li class="service__item"><a href="#" class="service__link">Преимущества</a>
+                            <li class="service__item"><a href="#" class="service__link">Наши скидки</a>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div class="service__info">
-                <h3 class="service__text">О компании</h3>
-                <div class="service__link">
-                    <ul class="service_list">
-                        <li class="service__item"><a href="#" class="service__link">О нас</a>
-                        <li class="service__item"><a href="#" class="service__link">Контакты</a>
-                        <li class="service__item"><a href="#" class="service__link">Вакансии</a>
-                        <li class="service__item"><a href="#" class="service__link">Партнеры</a>
-                    </ul>
-                    <ul class="service_list">
-                        <li class="service__item"><a href="#" class="service__link">Сертификаты</a>
-                        <li class="service__item"><a href="#" class="service__link">Преимущества</a>
-                        <li class="service__item"><a href="#" class="service__link">Наши скидки</a>
+            <div class="service">
+                <div class="footer__bonus bonus">
+                    <ul class="bonus__list">
+                        <li class="bonus__item"><img class="delivery" src="img/delivery.svg" alt="Доставка">бесплантая доставка от 4000р
+                        <li class="bonus__item"><img class="heart heart_bonus" src="img/heart.svg" alt="Лайк">пробники в подарок при каждой покупке
+                        <li class="bonus__item"><img class="cup" src="img/cup.svg" alt="Кубок">акции и подарки за покупку
                     </ul>
                 </div>
-            </div>
-            <div class="footer__bonus">
-                <ul class="bonus__list">
-                    <li class="bonus__item"><a href="#" class="bonus__link"><img class="delivery" src="img/delivery.svg" alt="Доставка">бесплантая доставка от 4000р</a>
-                    <li class="bonus__item"><a href="#" class="bonus__link"><img class="heart heart_bonus" src="img/heart.svg" alt="Лайк">пробники в подарок при каждой покупке</a>
-                    <li class="bonus__item"><a href="#" class="bonus__link"><img class="cup" src="img/cup.svg" alt="Кубок">акции и подарки за покупку</a>
-                </ul>
-            </div>
-            <div class="footer__references">
-                <ul class="references__list">
-                    <li class="references__item"><a href="#" class="references__link"><img class="facebook" src="img/facebook.svg" alt="facebook"></a>
-                    <li class="references__item"><a href="#" class="references__link"><img class="twitter" src="img/twitter.svg" alt="twitter"></a>
-                    <li class="references__item"><a href="#" class="references__link"><img class="instagram" src="img/instagram.svg" alt="instagram"></a>
-                </ul>
+                <div class="footer__references references">
+                    <ul class="references__list">
+                        <li class="references__item"><a href="#" class="references__link"><img class="facebook" src="img/facebook.svg" alt="facebook"></a>
+                        <li class="references__item"><a href="#" class="references__link"><img class="twitter" src="img/twitter.svg" alt="twitter"></a>
+                        <li class="references__item"><a href="#" class="references__link"><img class="instagram" src="img/instagram.svg" alt="instagram"></a>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="copyright">
