add footer bonus

--- a/src/index.html
+++ b/src/index.html
@@ -123,9 +123,9 @@
             <div class="service">
                 <div class="footer__bonus bonus">
                     <ul class="bonus__list">
-                        <li class="bonus__item"><img class="delivery" src="img/delivery.svg" alt="Доставка">бесплантая доставка от 4000р
-                        <li class="bonus__item"><img class="heart heart_bonus" src="img/heart.svg" alt="Лайк">пробники в подарок при каждой покупке
-                        <li class="bonus__item"><img class="cup" src="img/cup.svg" alt="Кубок">акции и подарки за покупку
+                        <li class="bonus__item"><img class="bonus__delivery" src="img/delivery.svg" alt="Доставка">бесплантая доставка от 4000р
+                        <li class="bonus__item"><img class="bonus__heart" src="img/heart.svg" alt="Лайк">пробники в подарок при каждой покупке
+                        <li class="bonus__item"><img class="bonus__cup" src="img/cup.svg" alt="Кубок">акции и подарки за покупку
                     </ul>
                 </div>
                 <div class="footer__references references">
