add footer copyright

--- a/src/index.html
+++ b/src/index.html
@@ -137,10 +137,10 @@
                     </div>
                 </div>
         </div>
+        <hr class="line">
         <div class="copyright">
-            <span class="information__first-line">2005-2017 c 7h350p.ru - модный интернет магазин одежды, обуви и аксессуаров.</span>
-            <span class="information__second-line">Все права защищены. Доставка по всей России!</span>
-        </div>
+            <p class="copyright__text">2005-2017 © 7h35h0p.ru — модный интернет-магазин одежды, обуви и аксессуаров.</p>
+            <p class="copyright__text">Все права защищены. Доставка по всей России!</p>
     </div>
 
 </div>
